--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,12 @@ h1 {
   line-height: 1.1;
 }
 
+@media screen and (min-width: 1280px) {
+  h1 {
+    font-size: 3rem;
+  }
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
